# openharmony6.0-ai-agent-rk3568

./: .gitignore  OpenHarmony-AI-Agent-调研.md  README.md  build-profile.json5  build.ps1  build.sh  build_all_ai_arm64.sh  build_exec_napi.sh  build_napi_arm64.sh  mcp-impl.md  rag-impl.md  开发日志.md
AppScope/: app.json5
llama_cpp/: build_arm64.sh  ohos_arm64.cmake
product/phone/: oh-package.json5
product/phone/src/main/: module.json5
product/phone/src/main/cpp/: CMakeLists.txt  exec_napi.cpp  llama_napi.cpp
product/phone/src/main/cpp/types/libllama_napi/: index.d.ts  oh-package.json5
product/phone/src/main/ets/model/mcpImpl/: McpClient.ts
product/phone/src/main/ets/model/ragImpl/: VectorRagService.ts
product/phone/src/main/ets/pages/: aiAssistant.ets  pythonRunner.ets  settingList.ets
product/phone/src/main/resources/base/element/: string.json
product/phone/src/main/resources/base/profile/: main_pages.json
product/phone/src/main/resources/rawfile/: agent_daemon.py  api_config.json.example  settinglist.json
product/phone/src/main/resources/rawfile/knowledge/: device_manual.txt  kb_index.json  oh6_features.txt  settings_faq.txt
